--- a/inventory/dev.yml
+++ b/inventory/dev.yml
@@ -10,3 +10,7 @@
 
 [lb]
 172.31.70.153 ansible_ssh_user=ubuntu
+
+[all:vars]
+ansible_user=ec2-user
+ansible_ssh_private_key_file=/path/to/directory/dev.pem
