--- a/static-assignments/common.yml
+++ b/static-assignments/common.yml
@@ -1,19 +1,19 @@
 ---
-- name: Update web, nfs, and db servers
-  hosts: webservers, nfs,
+- name: Update web, nfs
+  hosts: webservers, nfs
   become: yes
   tasks:
     - name: ensure wireshark is at the latest version on RedHat/CentOS
       yum:
         name: wireshark
         state: latest
-      when: ansible_facts['os_family'] == 'RedHat'
+    
 
     - name: ensure wireshark is at the latest version on Debian/Ubuntu
       apt:
         name: wireshark
         state: latest
-      when: ansible_facts['os_family'] == 'Debian'
+      
 
     - name: create a directory
       file:
@@ -45,13 +45,13 @@
     - name: Update apt repo
       apt:
         update_cache: yes
-      when: ansible_facts['os_family1'] == 'Debian'
+      
 
     - name: ensure wireshark is at the latest version on Ubuntu
       apt:
         name: wireshark
         state: latest
-      when: ansible_facts['os_family'] == 'Debian'
+      
 
     - name: create a directory
       file:
