Commit new role files into GitHub

--- a/playbooks/site.yml
+++ b/playbooks/site.yml
@@ -16,3 +16,5 @@
 -  hosts: webservers
 - name: Webserver assignment
   import_playbook: ../static-assignments/webservers.yml
+
+- import_playbook: ../static-assignments/db-servers.yml
