--- a/inventory/uat.yml
+++ b/inventory/uat.yml
@@ -1,3 +1,9 @@
 [uat-webservers]
-172.31.17.37 ansible_ssh_user='ec2-user'
-172.31.122.242 ansible_ssh_user='ec2-user'
+172.31.175.49 ansible_ssh_user='ec2-user'
+172.31.219.153 ansible_ssh_user='ec2-user'
+
+[lb]
+172.31.195.40 ansible_ssh_user=<ec2-user> 
+                     
+[db-servers]
+172.31.188.183 ansible_ssh_user=<ec2-user>  
