--- a/roles/apache/defaults/main.yml
+++ b/roles/apache/defaults/main.yml
@@ -9,6 +9,11 @@ apache_create_vhosts: true
 apache_vhosts_filename: "vhosts.conf"
 apache_vhosts_template: "vhosts.conf.j2"
 
+# this will enable and disable apache at will
+enable_apache_lb: false
+#enable_apache_lb: true
+load_balancer_is_required: false
+
 # On Debian/Ubuntu, a default virtualhost is included in Apache's configuration.
 # Set this to `true` to remove that default.
 apache_remove_default_vhost: false
