--- a/roles/apache/tasks/configure-Debian.yml
+++ b/roles/apache/tasks/configure-Debian.yml
@@ -50,6 +50,37 @@
     force: "{{ ansible_check_mode }}"
   notify: restart apache
   when: apache_create_vhosts | bool
+  become: yes
+
+- name: Enable Apache modules
+  ansible.builtin.shell:
+    cmd: "a2enmod {{ item }}"
+  loop:
+    - rewrite
+    - proxy
+    - proxy_balancer
+    - proxy_http
+    - headers
+    - lbmethod_bytraffic
+    - lbmethod_byrequests
+  notify: restart apache
+  become: yes
+
+- name: Insert load balancer configuration into Apache virtual host
+  ansible.builtin.blockinfile:
+    path: /etc/apache2/sites-available/000-default.conf
+    block: |
+      <Proxy "balancer://mycluster">
+        BalancerMember http://<webserver1-ip-address>:80
+        BalancerMember http://<webserver2-ip-address>:80
+        ProxySet lbmethod=byrequests
+      </Proxy>
+      ProxyPass "/" "balancer://mycluster/"
+      ProxyPassReverse "/" "balancer://mycluster/"
+    marker: "# {mark} ANSIBLE MANAGED BLOCK"
+    insertbefore: "</VirtualHost>"
+  notify: restart apache
+  become: yes  
 
 - name: Remove default vhost in sites-enabled.
   file:
