--- a/roles/nginx/defaults/main.yml
+++ b/roles/nginx/defaults/main.yml
@@ -2,6 +2,11 @@
 # Used only for Debian/Ubuntu installation, as the -t option for apt.
 nginx_default_release: ""
 
+# this will enable or disable nginx
+enable_nginx_lb: true
+#enable_nginx_lb: false
+load_balancer_is_required: false
+
 # Used only for Redhat installation, enables source Nginx repo.
 nginx_yum_repo_enabled: true
 
@@ -64,28 +69,33 @@ nginx_remove_default_vhost: false
 # Listen on IPv6 (default: true)
 nginx_listen_ipv6: true
 
-nginx_vhosts: []
+nginx_vhosts: 
 # Example vhost below, showing all available options:
-# - listen: "80" # default: "80"
-#   server_name: "example.com" # default: N/A
-#   root: "/var/www/example.com" # default: N/A
-#   index: "index.html index.htm" # default: "index.html index.htm"
+ - listen: "80" # default: "80"
+   server_name: "example.com" # default: N/A
+   server_name_redirect: "example.com"
+   root: "/var/www/html" # default: N/A
+   index: "index.html index.htm" # default: "index.html index.htm"
 #   filename: "example.com.conf" # Can be used to set the vhost filename.
-#
+   locations:
+             - path: "/"
+               proxy_pass: "http://myapp1"
 #   # Properties that are only added if defined:
-#   server_name_redirect: "www.example.com" # default: N/A
-#   error_page: ""
-#   access_log: ""
-#   error_log: ""
-#   extra_parameters: "" # Can be used to add extra config blocks (multiline).
-#   template: "" # Can be used to override the `nginx_vhost_template` per host.
-#   state: "absent" # To remove the vhost configuration.
+   server_name_redirect: "www.example.com" # default: N/A
+   error_page: ""
+   access_log: ""
+   error_log: ""
+   extra_parameters: "" # Can be used to add extra config blocks (multiline).
+   template: "" # Can be used to override the `nginx_vhost_template` per host.
+   state: "absent" # To remove the vhost configuration.
 
-nginx_upstreams: []
-# - name: myapp1
-#   strategy: "ip_hash" # "least_conn", etc.
-#   keepalive: 16 # optional
-#   servers:
+nginx_upstreams: 
+- name: myapp1
+  strategy: "ip_hash" # "least_conn", etc.
+  keepalive: 16 # optional
+  servers:
+    - "172.31.175.49 weight=5"
+    - "172.31.219.153 weight=5"
 #     - "srv1.example.com"
 #     - "srv2.example.com weight=3"
 #     - "srv3.example.com"
