--- a/roles/webserver/tasks/main.yml
+++ b/roles/webserver/tasks/main.yml
@@ -1,17 +1,84 @@
 ---
 - name: install apache
+  remote_user: ec2-user
   become: true
   ansible.builtin.yum:
     name: "httpd"
     state: present
 
 - name: install git
+  remote_user: ec2-user
   become: true
+  become_user: root
   ansible.builtin.yum:
     name: "git"
     state: present
 
+- name: install EPEL release
+  remote_user: ec2-user
+  become: true
+  become_user: root
+  ansible.builtin.command:
+    cmd: sudo dnf install https://dl.fedoraproject.org/pub/epel/epel-release-latest-9.noarch.rpm -y
+
+- name: Install dnf-utils and Remi repository
+  remote_user: ec2-user
+  become: true
+  become_user: root
+  ansible.builtin.command:
+    cmd: sudo dnf install dnf-utils http://rpms.remirepo.net/enterprise/remi-release-9.rpm -y
+
+- name: Rest PHP module
+  remote_user: ec2-user
+  become: true
+  become_user: root
+  ansible.builtin.command:
+    cmd: sudo module reset php -y
+
+- name: Install PHP and extensions
+  remote_user: ec2-user
+  become_user: root
+  ansible.builtin.yum:
+    name:
+      - php
+      - php-opcache
+      - php-gd
+      - php-curl
+      - php-mysqlnd
+    state: present
+
+- name: Install MYSQL Client
+  remote_user: ec2-user
+  become_user: root
+  ansible.builtin.yum:
+    name: "mysql"
+    state: present
+
+- name: Start PHP-FPM Service
+  remote_user: ec2-user
+  become: true
+  become_user: ec2-user
+  ansible.builtin.service:
+    name: php-fpm
+    state: started
+
+- name: Enable PHP-FPM Service
+  remote_user: ec2-user
+  become: true
+  become_user: root
+  ansible.builtin.command:
+    name: php-fpm
+    enabled: true
+
+- name: Set SELinux boolean for httpd_execmem
+  remote_user: ec2-user
+  become: true
+  become_user: root
+  ansible.builtin.command:
+    cmd: sudo setsebool -p httpd_execmem 1
+
 - name: clone a repo
+  remote_user: ec2-user
   become: true
   ansible.builtin.git:
     repo: https://github.com/GodwinGNS/tooling.git
@@ -23,13 +90,19 @@
   command: cp -r /var/www/html/html/ /var/www/
 
 - name: Start service httpd, if not started
+  remote_user: ec2-user
   become: true
+  become_user: root
   ansible.builtin.service:
     name: httpd
     state: started
 
 - name: recursively remove /var/www/html/html/ directory
+  remote_user: ec2-user
   become: true
+  become_user: root
   ansible.builtin.file:
     path: /var/www/html/html
     state: absent
+
+    
