--- a/roles/apache/tasks/configure-Debian.yml
+++ b/roles/apache/tasks/configure-Debian.yml
@@ -71,8 +71,8 @@
     path: /etc/apache2/sites-available/000-default.conf
     block: |
       <Proxy "balancer://mycluster">
-        BalancerMember http://<webserver1-ip-address>:80
-        BalancerMember http://<webserver2-ip-address>:80
+        BalancerMember http://44.200.208.238:80
+        BalancerMember http://3.239.61.219:80
         ProxySet lbmethod=byrequests
       </Proxy>
       ProxyPass "/" "balancer://mycluster/"
