--- a/playbooks/site.yml
+++ b/playbooks/site.yml
@@ -33,5 +33,5 @@
 
 - name: Loadbalancers assignment
   hosts: lb
-    - import_playbook: ../static-assignments/loadbalancers.yml
+  import_playbook: ../static-assignments/loadbalancers.yml
   when: load_balancer_is_required 
