--- a/playbooks/site.yml
+++ b/playbooks/site.yml
@@ -19,8 +19,8 @@
 
 
 ---
-- hosts: all
-  name: Include dynamic variables 
+- name: Include dynamic variables 
+  hosts: all
   tasks:
   import_playbook: ../static-assignments/common.yml 
   include: ../dynamic-assignments/env-vars.yml
