--- a/playbooks/site.yml
+++ b/playbooks/site.yml
@@ -27,11 +27,11 @@
   tags:
     - always
 
-- hosts: webservers
-- name: Webserver assignment
+  hosts: webservers
+  name: Webserver assignment
   import_playbook: ../static-assignments/webservers.yml
 
-- name: Loadbalancers assignment
+  name: Loadbalancers assignment
   hosts: lb
   import_playbook: ../static-assignments/loadbalancers.yml
   when: load_balancer_is_required 
