--- a/dynamic-assignment/env-vars.yml
+++ b/dynamic-assignment/env-vars.yml
@@ -1,16 +1,6 @@
 ---
-- name: collate variables from env specific file, if it exists
-  hosts: all
-  tasks:
-    - name: looping through list of available files
-      include_vars: "{{ item }}"
-      with_first_found:
-        - files:
-            - dev.yml
-            - stage.yml
-            - prod.yml
-            - uat.yml
-          paths:
-            - "{{ playbook_dir }}/../env-vars"
-      tags:
-        - always
+vars_files:
+  - "{{ playbook_dir }}/../../env-vars/dev.yml"
+  - "{{ playbook_dir }}/../../env-vars/stage.yml"
+  - "{{ playbook_dir }}/../../env-vars/prod.yml"
+  - "{{ playbook_dir }}/../../env-vars/uat.yml"
