--- a/playbooks/site.yml
+++ b/playbooks/site.yml
@@ -1,28 +1,8 @@
-# ---
-# - name: Include dynamic variables 
-#   hosts: all
-#   become: yes
-#   tasks:
-#     - include: ../dynamic-assignments/env-vars.yml
-#       tags:
-#         - always
-
-# - hosts: webservers
-# - name: Webserver assignment
-
-# - import_playbook: ../static-assignments/db-servers.yml
-
-# - import_playbook: ../static-assignments/uat-webservers.yml
-
-# - import_playbook: ../static-assignments/loadbalancers.yml
-#   when: load_balancer_is_required
-
-
 ---
 - name: Include dynamic variables 
   hosts: all
   tasks:
-    - include: ../dynamic-assignments/env-vars.yml
+    - include-vars: ../dynamic-assignment/env-vars.yml
       tags:
         - always
 
@@ -31,8 +11,9 @@
   
 - import_playbook: ../static-assignments/uat-webservers.yml
   
-- import_playbook: ../static-assignments/common.yml 
+#- import_playbook: ../static-assignments/common.yml 
 
-- hosts: lb
+- import_playbook: ../static-assignments/db-servers.yml
+
   import_playbook: ../static-assignments/loadbalancers.yml
   when: load_balancer_is_required 
