--- a/roles/mysql/vars/main.yml
+++ b/roles/mysql/vars/main.yml
@@ -1,10 +1,10 @@
 mysql_root_password:
 mysql_databases:
-  - name: tooling
+  - name: Godwin
     encoding: latin1
     collation: latin1_general_ci
 mysql_users:
-  - name:  webaccess
-    host: "172.31.0.0/16"
-    password: gns@1
-    priv: "webaccess.*:ALL"
+  - name: Godwin
+    host: "%"
+    password: admin1
+    priv: "*.*:ALL"
