--- a/deploy/Jenkinsfile
+++ b/deploy/Jenkinsfile
@@ -16,5 +16,26 @@
         }
       }
     }
+    stage('Package') {
+      steps {
+        script {
+          sh 'echo "Packaging Stage"'
+        }
+      }
+    }
+     stage('Deploy') {
+      steps {
+        script {
+          sh 'echo "Deploying Stage"'
+        }
+      }
+    }
+     stage('Clean up') {
+      steps {
+        script {
+          sh 'echo "Cleaning Stage"'
+        }
+      }
+    }
     }
 }
