--- a/inventory/sit.yml
+++ b/inventory/sit.yml
@@ -1,15 +1,16 @@
 [tooling]
-<SIT-Tooling-Web-Server-Private-IP-Address>
+172.31.157.246 ansible_ssh_user=ec2-user
 
-[todo]
-<SIT-Todo-Web-Server-Private-IP-Address>
+# [todo]
+# <SIT-Todo-Web-Server-Private-IP-Address>
 
 [nginx]
-<SIT-Nginx-Private-IP-Address>
+172.31.145.199 ansible_ssh_user=ubuntu
 
 [db:vars]
 ansible_user=ec2-user
 ansible_python_interpreter=/usr/bin/python
 
 [db]
-<SIT-DB-Server-Private-IP-Address>
+172.31.105.81 ansible_ssh_user=ubuntu 
+
