--- a/deploy/Jenkinsfile
+++ b/deploy/Jenkinsfile
@@ -187,22 +187,22 @@ pipeline {
             }
         }
 
-        // stage('Test SSH Connections') {
-        //     steps {
-        //         script {
-        //             def hosts = [
-        //                     ip: '172.31.157.246', user: 'ec2-user',
-        //                     ip: '172.31.145.199', user: 'ubuntu',
-        //                     ip: '172.31.105.81', user: 'ubuntu'
-        //             ]
-        //             for (host in hosts) {
-        //                 sshagent(['private-key']) {
-        //                     sh "ssh -o StrictHostKeyChecking=no -i /home/ubuntu/.ssh/key.pem ${host.user}@${host.ip} exit"
-        //                 }
-        //             }
-        //         }
-        //     }
-        // }
+        stage('Test SSH Connections') {
+            steps {
+                script {
+                    // def hosts = [
+                    //         ip: '172.31.157.246', user: 'ec2-user',
+                    //         ip: '172.31.145.199', user: 'ubuntu',
+                    //         ip: '172.31.105.81', user: 'ubuntu'
+                    // ]
+                    for (host in hosts) {
+                        sshagent(['private-key']) {
+                            sh "ssh -o StrictHostKeyChecking=no -i /home/ubuntu/.ssh/key.pem ${host.user}@${host.ip} exit"
+                        }
+                    }
+                }
+            }
+        }
 
         stage('Run Ansible Playbook') {
             steps {
