--- a/inventory/dev.yml
+++ b/inventory/dev.yml
@@ -1,13 +1,28 @@
 [tooling]
-172.31.118.13 ansible_ssh_user=ec2-user
+172.31.153.142 ansible_ssh_user=ec2-user
 
 [nginx]
-172.31.104.185 ansible_ssh_user=ubuntu
+172.31.230.189 ansible_ssh_user=ubuntu
 
 [db:vars]
 ansible_user=ec2-user
 ansible_python_interpreter=/usr/bin/python
 
 [db]
-172.31.82.43 ansible_ssh_user=ubuntu 
+172.31.51.1 ansible_ssh_user=ubuntu 
 
+# [tooling]
+# <Tooling-Web-Server-Private-IP-Address>
+
+# [todo]
+# <Todo-Web-Server-Private-IP-Address>
+
+# [nginx]
+# <Nginx-Private-IP-Address>
+
+# [db:vars]
+# ansible_user=ec2-user
+# ansible_python_interpreter=/usr/bin/python
+
+# [db]
+# <DB-Server-Private-IP-Address>
