--- a/playbooks/site.yml
+++ b/playbooks/site.yml
@@ -42,10 +42,8 @@
 
 # - import_playbook: ../static-assignments/db-servers.yml
 
-# - import_playbook: ../static-assignments/loadbalancers.yml
-#   when: load_balancer_is_required
-
-#   #########################
+ - import_playbook: ../static-assignments/loadbalancers.yml
+   when: load_balancer_is_required
 
 - hosts: db
 - name: database assignment
