--- a/deploy/Jenkinsfile
+++ b/deploy/Jenkinsfile
@@ -21,7 +21,7 @@ pipeline {
 
     stage('Checkout SCM') {
       steps {
-        git branch: 'main', url: 'https://github.com/GodwinGNS/ansible-config-mgt.git'
+        git branch: 'main', url: 'https://github.com/GodwinGNS/ansible-config-mgt.gi'
       }
     }
 
@@ -31,11 +31,42 @@ pipeline {
         sh 'sed -i "3 a roles_path=${WORKSPACE}/roles" ${WORKSPACE}/deploy/ansible.cfg'
       }
     }
-    
+
+    stage('Test SSH Connections') {
+      steps {
+        script {
+          def hosts = [
+            // [group: 'sonarqube', ip: '172.31.20.50', user: 'ubuntu']
+            [group: 'tooling', ip: '172.31.87.80', user: 'ec2-user'],
+            [group: 'todo', ip: '172.31.111.1', user: 'ec2-user'],
+            [group: 'nginx', ip: '172.31.175.129', user: 'ubuntu'],
+            [group: 'db', ip: '172.31.23.137', user: 'ubuntu']
+            // [group: 'artifactory', ip: '172.31.30.88', user: 'ubuntu'],
+            // [group: 'wireshark', ip: '172.31.17.28', user: 'ubuntu']
+          ]
+          for (host in hosts) {
+            sshagent(['private-key']) {
+              sh "ssh -o StrictHostKeyChecking=no -i /home/ubuntu/.ssh/dev.pem ${host.user}@${host.ip} exit"
+            }
+          }
+        }
+      }
+    }
+
     stage('Run Ansible playbook') {
-        steps {
-           ansiblePlaybook colorized: true, credentialsId: 'private-key', disableHostKeyChecking: true, installation: 'ansible', inventory: 'inventory/dev.yml', playbook: 'playbooks/site.yml', vaultTmpPath: ''
-         }
+      steps {
+        sshagent(['private-key']) {
+          ansiblePlaybook(
+            become: true,
+            credentialsId: 'private-key',
+            disableHostKeyChecking: true,
+            installation: 'ansible',
+            inventory: "${WORKSPACE}/inventory/${params.inventory}.yml",
+            playbook: "${WORKSPACE}/playbooks/site.yml",
+            // tags: "${params.ansible_tags}"
+          )
+        }
+      }
     }
 
     stage('Clean Workspace after build') {
@@ -45,4 +76,3 @@ pipeline {
     }
   }
 }
-
