--- a/inventory/dev.yml
+++ b/inventory/dev.yml
@@ -1,25 +1,16 @@
-
-# [tooling]
-# <Tooling-Web-Server-Private-IP-Address>
-
-# [todo]
-# <Todo-Web-Server-Private-IP-Address>
-
-# [nginx]
-# <Nginx-Private-IP-Address>
-
-# [db:vars]
-# ansible_user=ec2-user
-# ansible_python_interpreter=/usr/bin/python
-
-# [db]
-# <DB-Server-Private-IP-Address>
-
-[db]
-172.31.221.208 ansible_ssh_user='ubuntu'
+[tooling]
+172.31.87.80 ansible_ssh_user=ec2-user
+172.31.210.199 ansible_ssh_user=ec2-user
 
 [nginx]
-172.31.100.206 ansible_ssh_user='ec2-user'
+172.31.26.108 ansible_ssh_user=ubuntu
+
+[db:vars]
+ansible_user=ubuntu
+ansible_python_interpreter=/usr/bin/python
+
+[db]
+172.31.23.137 ansible_ssh_user=ubuntu
 
 [todo]
-172.31.47.129 ansible_ssh_user='ec2-user'
+172.31.111.1 ansible_ssh_user=ec2-user
