--- a/inventory/uat.yml
+++ b/inventory/uat.yml
@@ -1,6 +1,9 @@
 [uat-webservers]
-172.31.57.157 ansible_ssh_user='ec2-user'
-172.31.100.206 ansible_ssh_user='ec2-user'
+16.170.221.186 ansible_ssh_user=ec2-user ansible_ssh_private_key_file=/home/ubuntu/key.pem
+13.60.10.59 ansible_ssh_user=ec2-user ansible_ssh_private_key_file=/home/ubuntu/key.pem
 
 [lb]
-172.31.47.129 ansible_ssh_user=ubuntu
+51.20.83.248 ansible_ssh_user=ubuntu ansible_ssh_private_key_file=/home/ubuntu/key.pem
+
+[db-servers]
+51.20.141.152 ansible_ssh_user=ubuntu ansible_ssh_private_key_file=/home/ubuntu/key.pem
