--- a/roles/apache/tasks/main.yml
+++ b/roles/apache/tasks/main.yml
@@ -5,9 +5,10 @@
 
 - name: Check if nginx is running
   ansible.builtin.service_facts:
+
 - name: Stop and disable nginx if it is running
   ansible.builtin.service:
-    name: nginx
+    name: nginx # Adjust depending on your system's service name (apache2 for Debian/Ubuntu, httpd for RedHat/CentOS)
     state: stopped
     enabled: no
   when: "'nginx' in services and services['nginx'].state == 'running'"
@@ -25,7 +26,12 @@
   when: apache_packages is not defined
 
 # Setup/install tasks.
-- include_tasks: "setup-{{ ansible_os_family }}.yml"
+- name: Setup/install tasks
+  include_tasks: "setup-{{ ansible_os_family }}.yml"
+
+  vars:
+    ansible_become: true
+  when: enable_apache_lb
 
 # Figure out what version of Apache is installed.
 - name: Get installed version of Apache.
@@ -55,3 +61,5 @@
     name: "{{ apache_service }}"
     state: "{{ apache_state }}"
     enabled: "{{ apache_enabled }}"
+  become: true
+  when: enable_apache_lb
