--- a/static-assignments/uat-webservers.yml
+++ b/static-assignments/uat-webservers.yml
@@ -1,11 +1,4 @@
-#---
-#- hosts: todo
-# roles:
-#   - webserver
-
 ---
-- hosts: uat-webservers
-  remote_user: ec2-user
-  become: true
+- hosts: todo
   roles:
     - webserver
