--- a/deploy/Jenkinsfile
+++ b/deploy/Jenkinsfile
@@ -21,7 +21,7 @@ pipeline {
 
     stage('Checkout SCM') {
       steps {
-        git branch: 'main', url: 'https://github.com/GodwinGNS/ansible-config-mgt.gi'
+        git branch: 'main', url: 'https://github.com/GodwinGNS/ansible-config-mgt.git'
       }
     }
 
