--- a/deploy/Jenkinsfile
+++ b/deploy/Jenkinsfile
@@ -56,7 +56,7 @@ pipeline {
     stage('Run Ansible playbook') {
       steps {
         sshagent(['private-key']) {
-            ansiblePlaybook colorized: true, credentialsId: 'private-key', disableHostKeyChecking: true, installation: 'ansible', inventory: 'inventory/dev', playbook: 'playbooks/site.yml', vaultTmpPath: ''
+            ansiblePlaybook colorized: true, credentialsId: 'private-key', disableHostKeyChecking: true, installation: 'ansible', inventory: 'inventory/dev.yml', playbook: 'playbooks/site.yml', vaultTmpPath: ''
         }
       }
     }
